cybersecurity-project/kube/session2/nginx-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  labels:
    app: nginx    
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metaData:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.16
          ports:
            - containerPort: 8080
