cybersecurity-project/kube/session2/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-serv
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080 #service port
    targetPort: 8080 #container port
    nodePort: 30001 #host port
