cybersecurity-project/kube/session2/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-dashboard
  labels:
    name: nginx-dashboard
spec:
  rules:
  - host: yash.com
    http:
      paths:
      - pathType: Prefix #http:yash.com is prefix and http:localhost.yash.com is suffix
        path: "/"
        backend:
          service:
            name: nginx-serv #service name and port
            port: 
              number: 8080
